Auto stash before checking out "origin-public/auto-dependency-upgrades"
download data from bokota.pl

--- a/tutorials/tutorial_neuron_types/Neuron_types_example.ipynb
+++ b/tutorials/tutorial_neuron_types/Neuron_types_example.ipynb
@@ -45,9 +45,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": false
-    },
     "pycharm": {
      "name": "#%%\n"
     }
@@ -62,7 +59,7 @@
     "import urllib.request\n",
     "import zipfile\n",
     "\n",
-    "zip_file_path, _ = urllib.request.urlretrieve(\"https://4dnucleome.cent.uw.edu.pl/PartSeg/Downloads/typy_neuronow2.zip\")\n",
+    "zip_file_path, _ = urllib.request.urlretrieve(\"https://bokota.pl/typy_neuronow2.zip\")\n",
     "with open(zip_file_path, 'rb') as ff:\n",
     "    z_file = zipfile.ZipFile(ff)\n",
     "    z_file.extractall()\n"
