add codespell to pre-commit and fix pointed bugs

--- a/tutorials/tutorial_neuron_types/Neuron_types_example.ipynb
+++ b/tutorials/tutorial_neuron_types/Neuron_types_example.ipynb
@@ -13,7 +13,7 @@
     "## Motivation\n",
     "Often biologist work on mixed population of cells, where subpopulations can be detected based on specific markers, like presence or absence of particular tags or proteins.\n",
     "\n",
-    "For quantitative measurements we want to process as many cases as possible. Yet, processing of hundreds of stacks and grouping them manually is laborious and otherwise could require hours of manual sorting of imaging data. Therefore automatic recognition of specific types of cells is necessary. This motivates collaboration between experimental biologists and bioinformaticians. Here we present how PartSeg components can be used as part of a larger application implemented in as Jupyter notebook. The pipeline allows to automatize quantitative analysis of different neuronal subtypes.\n",
+    "For quantitative measurements we want to process as many cases as possible. Yet, processing of hundreds of stacks and grouping them manually is laborious and otherwise could require hours of manual sorting of imaging data. Therefore automatic recognition of specific types of cells is necessary. This motivates collaboration between experimental biologists and bioinformaticians. Here we present how PartSeg components can be used as part of a larger application implemented in as Jupyter notebook. The pipeline allows to automate quantitative analysis of different neuronal subtypes.\n",
     "\n",
     "We argue that exposing the functionality of PartSeg in Python rather than designing a plugin or scripting module for PartSeg is preferable for bioinformaticians as Python is a general and well-known (low entry-cost) programming language with wealth of scientific libraries. At the same time keeping the UI simple and uncluttered is preferable for experimental biologists (again low entry-cost).\n",
     "\n",
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Parameters of segmentaion "
+    "### Parameters of segmentation "
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load segmentaion"
+    "## Load segmentation"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Veriffy segmentaion \n",
+    "## Veriffy segmentation \n",
     "In example stack DMSO_120min_2_4.lsm on standard parameters, there are two cases that should be filtered. \n",
     "1. Three nucleus that are too close and are segmented as one component (number 1)\n",
     "2. Nucleus that touch border of image (numbers 10, 11, 12)\n",
@@ -322,7 +322,7 @@
     "    # radius is 3, 9, 9 because voxel size is 210x70x70nm and voxel size is in pixels, not physicla units\n",
     "    dilate_sitk = sitk.BinaryContour(sitk.GetImageFromArray(current_component_area.astype(np.uint8)))\n",
     "    dilate_mask = sitk.GetArrayFromImage(sitk.BinaryDilate(dilate_sitk, (3, 9 ,9)))\n",
-    "    # dilate_mask = dilate(current_component_area, (3, 9 ,9), False) # slower than two above lines but combined witrh next gave same result\n",
+    "    # dilate_mask = dilate(current_component_area, (3, 9 ,9), False) # slower than two above lines but combined with next gave same result\n",
     "    dilate_mask[current_component_area] = 0\n",
     "    value_green = np.percentile(image.get_channel(1)[0][current_component_area], 75)\n",
     "    # print(component_number, value_red, value_green)\n",
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save cutted nucleus "
+    "### Save catted nucleus "
    ]
   },
   {
@@ -436,7 +436,7 @@
     "        # radius is 3, 9, 9 because voxel size is 210x70x70nm and voxel size is in pixels, not physicla units\n",
     "        dilate_sitk = sitk.BinaryContour(sitk.GetImageFromArray(current_component_area.astype(np.uint8)))\n",
     "        dilate_mask = sitk.GetArrayFromImage(sitk.BinaryDilate(dilate_sitk, (3, 9 ,9)))\n",
-    "        # dilate_mask = dilate(current_component_area, (3, 9 ,9), False) # slower than two above lines but combined witrh next gave same result\n",
+    "        # dilate_mask = dilate(current_component_area, (3, 9 ,9), False) # slower than two above lines but combined with next gave same result\n",
     "        dilate_mask[current_component_area] = 0\n",
     "        value_green = np.percentile(image.get_channel(1)[0][current_component_area], 75)\n",
     "        # print(component_number, value_red, value_green, np.percentile(image.get_channel(1)[current_component_area], 50))\n",
@@ -495,7 +495,7 @@
     "cutted_neurons_dict = dict()\n",
     "\n",
     "for file_path in glob(os.path.join(data_path, \"*.lsm\")):\n",
-    "    print(\"proces\", os.path.basename(file_path))\n",
+    "    print(\"process\", os.path.basename(file_path))\n",
     "    cutted_neurons_dict[file_path] = segmentation_function(file_path, segment)\n",
     "    \n"
    ]
@@ -526,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup measurment\n",
+    "### Setup measurement\n",
     "It can be set manually using classes from `PartSegCore..analysis.measurement_calculation`"
    ]
   },
@@ -731,7 +731,7 @@
    "outputs": [],
    "source": [
     "for file_path in glob(os.path.join(data_path, \"*.lsm\")):\n",
-    "    print(\"proces\", os.path.basename(file_path))\n",
+    "    print(\"process\", os.path.basename(file_path))\n",
     "    segment = ThresholdAlgorithm()\n",
     "    segment.set_parameters(parameters)\n",
     "    image = TiffImageReader.read_image(file_path)\n",
