--- a/tutorials/tutorial_neuron_types/Neuron_types_example.ipynb
+++ b/tutorials/tutorial_neuron_types/Neuron_types_example.ipynb
@@ -492,7 +492,7 @@
     "segment = Algorithm()\n",
     "segment.set_parameters(parameters)\n",
     "\n",
-    "cutted_neurons_dict = dict()\n",
+    "cutted_neurons_dict = {}\n",
     "\n",
     "for file_path in glob(os.path.join(data_path, \"*.lsm\")):\n",
     "    print(\"process\", os.path.basename(file_path))\n",
@@ -551,7 +551,7 @@
     "def empty(_x, _y):\n",
     "    pass\n",
     "measurment_dict = defaultdict(list)\n",
-    "for file_path, nucleus_group_dict in cutted_neurons_dict.items():\n",
+    "for nucleus_group_dict in cutted_neurons_dict.values():\n",
     "    for nucleus_type, nucleus_list in nucleus_group_dict.items():\n",
     "        for _, nucleus in nucleus_list:\n",
     "            neuron_segment.set_image(nucleus)\n",
